2006-01-07  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): 0.99-6 released to CRAN

	* src/dgBCMatrix.c (cscb_trcbsm): Fix due to Peter Dalgaard for
	segfault in cases with multiple non-nested grouping factors.

2006-01-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99-4 to be released to CRAN
		(Depends): also on 'utils'

	* R/AllClass.R (diagonalMatrix): new class with "ddi*" and "ldi*"
	* R/diagMatrix.R (Diagonal): constructor and methods for
	diagonal matrices

	* R/ltTMatrix.R: new "minimal methods"

2005-12-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllGeneric.R (tcrossprod): 2-argument version; here, and for
	all methods (and help files).

2005-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (dimNamesCheck): fixed thinko -> bug
		for case (dimn.	 op  no_dimn.)

2005-11-14  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): 0.99-2  released to CRAN

2005-10-21  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (simulate method): Fixed a drop=FALSE problem reported
	by Julian Faraway.

2005-10-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (try_as): new utility
	* R/sparseMatrix.R: use try_as() in coercion to original class

2005-09-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgCMatrix.c (double_to_csc): and dgeMatrix_to_csc()

2005-09-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (dimNamesCheck): added

	* R/Matrix.R (as.array), (as.vector): new

2005-09-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Matrix): get logical argument 'sparse' with a smart
		default.
	* R/AllClass.R: move 'factors' slot toplevel "Matrix";
		"pMatrix" now contains "sparseMatrix"

2005-09-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/Class+Meth.R: new tests; t(t(m)) == m

	* src/dtCMatrix.c (tsc_transpose): add forgotten "diag" slot
